# traveling-simon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  local_deploy.sh
engine/: Cargo.toml  build.rs  main.rs  parsers.rs
engine/models/: capped.rs  distance.rs  duration.rs  ids.rs  input.rs  mod.rs  path.rs  path_cost.rs  ride_matrix.rs  site.rs  stop.rs  time_window.rs  timestamp.rs  world.rs
engine/src/: build.rs  main.rs  parsers.rs  path_bag.rs
engine/src/models/: ids.rs  input.rs  mod.rs  output.rs  path.rs  path_cost.rs  ride_matrix.rs  site.rs  time_window.rs  world.rs
src/models/: duration.rs  ids.rs  mod.rs  path.rs  site.rs  time_window.rs  timestamp.rs  world.rs
web/: app.js  package-lock.json  package.json  routes.js
web/public/: Hub.js  RideDurations.js  Site.js  index.html  script.js  style.css
