[package]
name = "traveling-simon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
serde = { version = "1.0.130", features = ["derive"] }
itertools = "0.10.3"
nom = "7.1.0"
serde_json = "1.0.72"

[[bin]]
name = "engine"
path = "engine/main.rs"
